chore(deps): update dependencies and fix security issues. add biome for linting and formatting. modernise some code and deal with linting issues

--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-  "name"         : "client-sessions",
-  "version"      : "0.8.0",
-  "description"  : "secure sessions stored in cookies",
-  "main"         : "lib/client-sessions",
-  "repository" : {
-    "type" : "git",
-    "url"  : "https://github.com/mozilla/node-client-sessions"
+  "name": "client-sessions",
+  "version": "0.8.0",
+  "description": "secure sessions stored in cookies",
+  "main": "lib/client-sessions",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mozilla/node-client-sessions"
   },
-  "dependencies" : {
-    "cookies" : "^0.7.0"
+  "dependencies": {
+    "cookies": "^0.9.1"
   },
   "devDependencies": {
-    "vows": "0.8.1",
-    "express": "4.15.2",
-    "request": "2.81.0"
+    "@biomejs/biome": "1.8.3",
+    "express": "4.19.2",
+    "request": "2.81.0",
+    "vows": "0.8.3"
   },
-  "author" : {
-    "name"  : "Ben Adida",
-    "email" : "ben@adida.net"
+  "author": {
+    "name": "Ben Adida",
+    "email": "ben@adida.net"
   },
-  "scripts" : {
+  "scripts": {
     "test": "vows --spec"
   },
   "engines": {
-    "node": ">= 0.8.0"
+    "node": ">= 18"
   },
   "license": "MPL-2.0",
   "bugs": "https://github.com/mozilla/node-client-sessions/issues"
